more pixel perfect - fix typings - fix dynamic text issues

--- a/Details.html
+++ b/Details.html
@@ -51,7 +51,7 @@
         <div class="special-container">
             <div class="course-description-text">
                 <div class="titles">
-                    <p class="course-title">Web Development Language</p>
+                    <p class="course-title">Web Development Languages</p>
                     <h3 class="course-name">HTML</h3>
                     <ul>
                         <li><ion-icon name="star"></ion-icon></li>
@@ -74,11 +74,13 @@
                 <div class="course-info-text-container">
                     <div class="course-credits">
                         <h4 class="course-info-name">
-                                <span title="HTML" class="course-name text-wrapper">HTML</span>  
+                                <span title="HTML" class="course-name text-wrapper text-limiter">HTML</span>  
                         </h4>
-                        <div class="author-section">
-                            <span class="by-span">by</span>
-                            <a href="#" class="course-info-author">Sarah Smith</a>
+                        <div class="text-limiter">
+                            <div class="author-section">
+                                <span class="by-span">by</span>
+                                <a href="#" title="Sarah Smith" class="course-info-author text-limiter">Sarah Smith</a>
+                            </div>
                         </div>
                     </div>
                     <div class="add-to-fav-box">
@@ -101,11 +103,13 @@
             <div class="course-info-text-container">
                 <div class="course-credits">
                     <h4 class="course-info-name">
-                            <span title="HTML" class="course-name text-wrapper">HTML</span>  
+                            <span title="HTML" class="course-name text-wrapper text-limiter">HTML</span>  
                     </h4>
-                    <div class="author-section">
-                        <span class="by-span">by</span>
-                        <a href="#" class="course-info-author">Sarah Smith</a>
+                    <div class="text-limiter">
+                        <div class="author-section">
+                            <span class="by-span">by</span>
+                            <a href="#" title="Sarah Smith" class="course-info-author text-limiter">Sarah Smith</a>
+                        </div>
                     </div>
                 </div>
                 <div class="add-to-fav-box">
